--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "A nodejs boilerplate to get started with.",
   "main": "index.js",
-  "type": "module",
+
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +20,22 @@
   "author": "Parth Patel",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "@jest/globals": "^29.5.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/config": "^3.3.0",
+    "@types/express": "^4.17.17",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "jest": "~29.5.0",
+    "nodemon": "^3.0.3",
+    "supertest": "~6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.4.4"
   }
 }
